--- a/index.html
+++ b/index.html
@@ -2,89 +2,33 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>VibeTurn Web Player</title>
+    <title>YouTube Video Player</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { 
             font-family: sans-serif; 
-            padding: 20px; 
             max-width: 800px; 
             margin: 0 auto; 
-        }
-        #youtube-input-container {
-            display: flex;
-            margin-bottom: 15px;
+            padding: 20px; 
+            text-align: center; 
         }
         #youtube-url {
-            flex-grow: 1;
-            padding: 8px;
-            margin-right: 10px;
-        }
-        #player-container {
-            position: relative;
             width: 100%;
-            max-width: 640px;
-            aspect-ratio: 16 / 9;
-            margin-bottom: 15px;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        #thumbnail {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;
-        }
-        #controls {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-        #controls button {
-            padding: 8px 12px;
-        }
-        #info {
-            margin-top: 15px;
-            border: 1px solid #ccc;
             padding: 10px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>VibeTurn - YouTube Video Player</h1>
-
-    <div id="youtube-input-container">
-        <input type="text" id="youtube-url" placeholder="Pega aquí el enlace de YouTube">
-        <button onclick="loadYouTubeVideo()">Cargar Video</button>
-    </div>
+    <h1>YouTube Video Player</h1>
+    <input type="text" id="youtube-url" placeholder="Pega aquí el enlace de YouTube">
+    <button onclick="loadYouTubeVideo()">Reproducir</button>
 
     <div id="player-container">
-        <img id="thumbnail" src="" alt="Miniatura del video" style="display:none;">
-    </div>
-
-    <div id="controls">
-        <button onclick="playPreviousTrack()" style="display:none;">Anterior</button>
-        <button onclick="togglePlayPause()" style="display:none;">Play/Pause</button>
-        <button onclick="playNextTrack()" style="display:none;">Siguiente</button>
-    </div>
-
-    <div id="info">
-        <h2>Información del Video:</h2>
-        <p>Estado: <span id="status">Esperando video</span></p>
-        <p>Título: <span id="title">N/A</span></p>
+        <img id="thumbnail" src="" style="max-width: 100%; display: none;">
     </div>
 
     <script>
-        let currentVideoInfo = { 
-            url: null, 
-            audioUrl: null, 
-            videoUrl: null, 
-            thumbnailUrl: null, 
-            title: null 
-        };
-        let audioPlayer = new Audio();
-
         async function loadYouTubeVideo() {
             const youtubeUrlInput = document.getElementById('youtube-url');
             const videoUrl = youtubeUrlInput.value.trim();
@@ -102,59 +46,24 @@
                     throw new Error(data.error);
                 }
 
-                // Actualizar información del video
-                currentVideoInfo = {
-                    url: videoUrl,
-                    audioUrl: data.audio_url,
-                    videoUrl: data.video_with_audio_url,
-                    thumbnailUrl: data.thumbnail_url,
-                    title: null // Podrías extraer el título de YouTube si es posible
-                };
-
                 // Mostrar miniatura
                 const thumbnailEl = document.getElementById('thumbnail');
-                thumbnailEl.src = currentVideoInfo.thumbnailUrl;
+                thumbnailEl.src = data.thumbnail_url;
                 thumbnailEl.style.display = 'block';
 
-                // Configurar audio
-                audioPlayer.src = currentVideoInfo.audioUrl;
+                // Crear un nuevo Audio con la URL
+                const audioPlayer = new Audio(data.audio_url);
+                audioPlayer.play();
 
-                // Actualizar información
-                document.getElementById('status').textContent = 'Video cargado';
-                document.getElementById('title').textContent = 'Título no disponible';
-
-                // Mostrar controles
-                document.querySelectorAll('#controls button').forEach(btn => btn.style.display = 'block');
+                // Imprimir URLs en consola
+                console.log('Audio URL:', data.audio_url);
+                console.log('Video URL:', data.video_with_audio_url);
+                console.log('Thumbnail URL:', data.thumbnail_url);
 
             } catch (error) {
                 console.error('Error:', error);
                 alert('No se pudo cargar el video. Verifica el enlace.');
             }
-        }
-
-        function togglePlayPause() {
-            const thumbnailEl = document.getElementById('thumbnail');
-            const statusEl = document.getElementById('status');
-
-            if (audioPlayer.paused) {
-                audioPlayer.play();
-                thumbnailEl.style.opacity = '1';
-                statusEl.textContent = 'Reproduciendo';
-            } else {
-                audioPlayer.pause();
-                thumbnailEl.style.opacity = '0.5';
-                statusEl.textContent = 'Pausado';
-            }
-        }
-
-        function playNextTrack() {
-            // Placeholder para funcionalidad futura de playlist
-            alert('Función no implementada aún');
-        }
-
-        function playPreviousTrack() {
-            // Placeholder para funcionalidad futura de playlist
-            alert('Función no implementada aún');
         }
     </script>
 </body>
