--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>YouTube Video Player</h1>
+    <h1>YouTube Video Player(Ex: https://youtu.be/dQw4w9WgXcQ)</h1>
     <input type="text" id="youtube-url" placeholder="Pega aquí el enlace de YouTube">
     <button onclick="loadYouTubeVideo()">Reproducir</button>
 
