--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="player-container">
         <img id="thumbnail" src="" style="max-width: 100%; display: none;">
-        <video id="video-player" controls style="display: none;"></video>
+        <video id="video-player" controls playsinline style="display: none;"></video>
     </div>
 
     <script>
