--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             max-width: 100%;
             margin-top: 15px;
         }
+        #pip-button {
+            margin-top: 10px;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -31,14 +35,18 @@
     <div id="player-container">
         <img id="thumbnail" src="" style="max-width: 100%; display: none;">
         <video id="video-player" controls playsinline style="display: none;"></video>
+        <button id="pip-button" onclick="enterPictureInPicture()">Picture-in-Picture</button>
     </div>
 
     <script>
+        let currentVideoPlayer = null;
+
         async function loadYouTubeVideo() {
             const youtubeUrlInput = document.getElementById('youtube-url');
             const videoUrl = youtubeUrlInput.value.trim();
             const thumbnailEl = document.getElementById('thumbnail');
             const videoPlayerEl = document.getElementById('video-player');
+            const pipButton = document.getElementById('pip-button');
 
             if (!videoUrl) {
                 alert('Por favor, ingresa un enlace de YouTube');
@@ -61,7 +69,19 @@
                 // Configurar y mostrar video
                 videoPlayerEl.src = data.audio_url;
                 videoPlayerEl.style.display = 'block';
-                videoPlayerEl.play();
+                
+                // Prevenir pausa automática
+                videoPlayerEl.addEventListener('pause', preventAutoPause);
+                
+                // Reproducir
+                await videoPlayerEl.play();
+
+                // Habilitar Picture-in-Picture si está soportado
+                if (document.pictureInPictureEnabled) {
+                    pipButton.style.display = 'block';
+                }
+
+                currentVideoPlayer = videoPlayerEl;
 
                 // Imprimir URLs en consola
                 console.log('Video URL:', data.audio_url);
@@ -72,6 +92,29 @@
                 alert('No se pudo cargar el video. Verifica el enlace.');
             }
         }
+
+        function preventAutoPause() {
+            if (document.hidden && currentVideoPlayer) {
+                currentVideoPlayer.play();
+            }
+        }
+
+        async function enterPictureInPicture() {
+            if (currentVideoPlayer && document.pictureInPictureEnabled) {
+                try {
+                    await currentVideoPlayer.requestPictureInPicture();
+                } catch (error) {
+                    console.error('Error entering PiP:', error);
+                }
+            }
+        }
+
+        // Prevenir pausa global
+        document.addEventListener('visibilitychange', () => {
+            if (currentVideoPlayer && document.hidden) {
+                currentVideoPlayer.play();
+            }
+        });
     </script>
 </body>
 </html>
