--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             background-color: #000;
         }
         #youtube-player {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            max-height: 360px;
+            background-color: #000;
         }
         #controls button { padding: 8px 12px; margin: 5px; }
         #info { margin-top: 15px; border: 1px solid #ccc; padding: 10px; }
@@ -29,7 +27,9 @@
     <h1>VibeTurn - Reproductor Web</h1>
 
     <div id="player-container">
-        <iframe id="youtube-player" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" title="Luis Fonsi - Despacito ft. Daddy Yankee" width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ?playsinline=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fapp.whatsnode.com&amp;widgetid=1&amp;forigin=https%3A%2F%2Fapp.whatsnode.com%2F&amp;aoriginsup=0&amp;vf=6"></iframe>
+        <video id="youtube-player" controls style="width: 100%; max-height: 360px; background-color: #000;">
+            Tu navegador no soporta el elemento de video.
+        </video>
     </div>
 
     <div id="controls">
@@ -49,7 +49,7 @@
         <p>Artista: <span id="artist">Luis Fonsi</span></p>
     </div>
 
-    <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/ab11fe69/www-widgetapi.vflset/www-widgetapi.js" async=""></script><script src="https://www.youtube.com/iframe_api"></script><script>
+    <script>
         // --- Configuración ---
         // ¡¡REEMPLAZA ESTO CON TU LÓGICA REAL DE PLAYLIST!!
         const playlistVideoIds = [
@@ -59,156 +59,12 @@
             'kJQP7kiw5Fk'  // Ed Sheeran - Shape of You
         ];
         let currentPlaylistIndex = 0;
-        const initialVideoId = playlistVideoIds[currentPlaylistIndex];
 
-        // --- Variables Globales ---
-        var player; // Variable global para el objeto YT.Player
+        // Elemento de video
+        const videoPlayerEl = document.getElementById('youtube-player');
+
+        // Variables Globales ---
         var currentVideoInfo = { id: null, title: null, artist: null, artwork: null };
-        var lastState = -1; // Para rastrear el último estado conocido
-
-        // --- Inicialización de la API IFrame de YouTube ---
-        // 1. Cargar la API de forma asíncrona
-        var tag = document.createElement('script');
-        tag.src = "https://www.youtube.com/iframe_api";
-        var firstScriptTag = document.getElementsByTagName('script')[0];
-        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-        // 2. Esta función se llama automáticamente cuando la API está lista.
-        function onYouTubeIframeAPIReady() {
-            console.log("onYouTubeIframeAPIReady: API lista.");
-            player = new YT.Player('youtube-player', {
-                // height: '360', // El CSS ahora controla el tamaño responsivo
-                // width: '640',
-                videoId: initialVideoId,
-                playerVars: {
-                    'playsinline': 1 // Importante para reproducción en móviles sin pantalla completa automática
-                    // 'controls': 0 // Opcional: Ocultar controles nativos de YouTube
-                    // 'autoplay': 1 // Autoplay podría no funcionar en todos los navegadores/móviles
-                },
-                events: {
-                    'onReady': onPlayerReady,
-                    'onStateChange': onPlayerStateChange,
-                    'onError': onPlayerError // Añadir manejo de errores básico
-                }
-            });
-        }
-
-        // 3. Se llama cuando el reproductor está listo.
-        function onPlayerReady(event) {
-            console.log("onPlayerReady: Reproductor listo.");
-            updateDisplayInfo("Listo (ID: " + initialVideoId + ")");
-            // Opcional: Iniciar reproducción automáticamente (puede fallar por políticas de navegador)
-            // event.target.playVideo();
-        }
-
-        // 4. Se llama cuando el estado del reproductor cambia. ¡Aquí está la lógica principal!
-        function onPlayerStateChange(event) {
-            const newState = event.data;
-            let statusString = "Desconocido";
-
-            // Evitar procesar el mismo estado múltiples veces si la API lo envía rápido
-            if (newState === lastState) {
-                // console.log("onPlayerStateChange: Estado repetido", newState, "ignorado.");
-                // return; // Descomentar si causa problemas, pero puede ocultar eventos válidos
-            }
-            lastState = newState; // Actualizar último estado conocido
-
-            console.log("onPlayerStateChange: Nuevo estado:", newState);
-
-            switch (newState) {
-                case YT.PlayerState.PLAYING: // 1
-                    statusString = "Reproduciendo";
-                    console.log("Estado: PLAYING");
-                    handlePlayingState(); // Lógica separada para claridad
-                    // Notificar a Android que se está reproduciendo (para sincronizar botón pausa)
-                    if (isAndroidApp()) {
-                        Android.notifyPlaybackResumed();
-                        console.log("Llamado: Android.notifyPlaybackResumed()");
-                    }
-                    break;
-                case YT.PlayerState.PAUSED: // 2
-                    statusString = "Pausado";
-                     console.log("Estado: PAUSED");
-                    // Notificar a Android que se pausó (para sincronizar botón play)
-                    if (isAndroidApp()) {
-                        Android.notifyPlaybackPaused();
-                        console.log("Llamado: Android.notifyPlaybackPaused()");
-                    }
-                    break;
-                case YT.PlayerState.ENDED: // 0
-                    statusString = "Finalizado";
-                     console.log("Estado: ENDED");
-                    // ¡¡NO LLAMAR a notifyPlaybackStopped() aquí!!
-                    // Intentar reproducir la siguiente canción automáticamente
-                    console.log("Intentando reproducir siguiente canción...");
-                    playNextTrack();
-                    break;
-                case YT.PlayerState.BUFFERING: // 3
-                    statusString = "Cargando...";
-                     console.log("Estado: BUFFERING");
-                    // Aquí podrías notificar a Android si quieres mostrar un estado de carga
-                    break;
-                case YT.PlayerState.CUED: // 5
-                    statusString = "Video Cargado";
-                     console.log("Estado: CUED");
-                    // El video está listo pero no ha empezado a reproducirse
-                    break;
-                case YT.PlayerState.UNSTARTED: // -1
-                    statusString = "No Iniciado";
-                     console.log("Estado: UNSTARTED");
-                    break;
-                default:
-                    statusString = `Estado ${newState}`;
-            }
-            updateDisplayInfo(statusString);
-        }
-
-        // 5. Manejo básico de errores del reproductor
-        function onPlayerError(event) {
-            console.error("onPlayerError: Error del reproductor:", event.data);
-            updateDisplayInfo("Error: " + event.data);
-            // Aquí podrías intentar saltar a la siguiente canción o mostrar un mensaje al usuario
-            // playNextTrack(); // Cuidado con bucles infinitos si todas las canciones fallan
-        }
-
-        // --- Lógica de Estado PLAYING ---
-        function handlePlayingState() {
-            if (!player || typeof player.getVideoData !== 'function') return;
-
-            const videoData = player.getVideoData();
-            const videoId = videoData.video_id;
-            const title = videoData.title;
-            const currentTime = player.getCurrentTime();
-
-            // Es una canción nueva si el ID cambió O si el tiempo es casi 0 (empezó desde el principio)
-            const isNewSong = (videoId !== currentVideoInfo.id) || (currentTime < 1.5); // Margen de 1.5s
-
-            if (isNewSong) {
-                console.log("handlePlayingState: Detectada nueva canción o inicio.");
-                const artist = extractArtistFromTitle(title); // Extraer artista (¡adapta esta función!)
-                // Crear URL de artwork (mqdefault es calidad media)
-                const artworkUrl = `https://i.ytimg.com/vi/${videoId}/mqdefault.jpg`;
-
-                // Actualizar información local
-                currentVideoInfo = { id: videoId, title: title, artist: artist, artwork: artworkUrl };
-                console.log("handlePlayingState: Nueva info:", currentVideoInfo);
-
-                // Notificar a la app Android con los datos de la NUEVA canción
-                if (isAndroidApp()) {
-                    Android.notifySongChanged(videoId, title, artist, artworkUrl);
-                    console.log("Llamado: Android.notifySongChanged() con datos nuevos.");
-                }
-
-                // Actualizar display HTML (si existe)
-                updateDisplayInfo("Reproduciendo");
-
-            } else {
-                 console.log("handlePlayingState: Reanudación de la misma canción detectada.");
-                 // Aquí solo llamamos a notifyPlaybackResumed (ya se hizo en onStateChange)
-                 // No necesitamos llamar a notifySongChanged de nuevo.
-                 updateDisplayInfo("Reproduciendo");
-            }
-        }
 
         // --- Funciones Auxiliares ---
 
@@ -256,62 +112,83 @@
         // --- Funciones llamadas desde Android (o botones de debug) ---
 
         /** Carga y reproduce la siguiente canción de la playlist. */
+        async function loadVideoFromAPI(videoId) {
+            try {
+                const response = await fetch(`get_youtube_audio.php?url=https://youtu.be/${videoId}`);
+                const data = await response.json();
+
+                if (data.error) {
+                    throw new Error(data.error);
+                }
+
+                // Configurar video
+                videoPlayerEl.src = data.video_url;
+                videoPlayerEl.poster = data.thumbnail_url;
+                videoPlayerEl.play();
+
+                // Actualizar información
+                updateDisplayInfo("Reproduciendo");
+                currentVideoInfo = {
+                    id: videoId,
+                    title: data.title || 'Título Desconocido',
+                    artist: extractArtistFromTitle(data.title),
+                    artwork: data.thumbnail_url
+                };
+
+                // Actualizar display
+                document.getElementById('videoId').textContent = videoId;
+                document.getElementById('title').textContent = currentVideoInfo.title;
+                document.getElementById('artist').textContent = currentVideoInfo.artist;
+
+                console.log('Video URL:', data.video_url);
+                console.log('Thumbnail URL:', data.thumbnail_url);
+
+            } catch (error) {
+                console.error('Error:', error);
+                alert('No se pudo cargar el video. Verifica el enlace.');
+            }
+        }
+
+        // Función para reproducir siguiente track
         function playNextTrack() {
-            console.log("playNextTrack: Intentando reproducir siguiente...");
             currentPlaylistIndex++;
             if (currentPlaylistIndex >= playlistVideoIds.length) {
-                currentPlaylistIndex = 0; // Volver al inicio de la lista
-                 console.log("playNextTrack: Fin de la lista, volviendo al inicio.");
+                currentPlaylistIndex = 0;
             }
             const nextVideoId = playlistVideoIds[currentPlaylistIndex];
-            console.log("playNextTrack: Cargando video ID:", nextVideoId, "en índice:", currentPlaylistIndex);
-            if (player && typeof player.loadVideoById === 'function') {
-                player.loadVideoById(nextVideoId); // Carga Y empieza a reproducir
-            } else {
-                console.error("playNextTrack: El reproductor no está listo o no existe.");
-            }
+            loadVideoFromAPI(nextVideoId);
         }
 
-        /** Carga y reproduce la canción anterior de la playlist. */
+        // Función para reproducir track anterior
         function playPreviousTrack() {
-             console.log("playPreviousTrack: Intentando reproducir anterior...");
             currentPlaylistIndex--;
             if (currentPlaylistIndex < 0) {
-                currentPlaylistIndex = playlistVideoIds.length - 1; // Ir al final de la lista
-                 console.log("playPreviousTrack: Inicio de la lista, yendo al final.");
+                currentPlaylistIndex = playlistVideoIds.length - 1;
             }
             const prevVideoId = playlistVideoIds[currentPlaylistIndex];
-             console.log("playPreviousTrack: Cargando video ID:", prevVideoId, "en índice:", currentPlaylistIndex);
-            if (player && typeof player.loadVideoById === 'function') {
-                player.loadVideoById(prevVideoId);
-            } else {
-                 console.error("playPreviousTrack: El reproductor no está listo o no existe.");
-            }
+            loadVideoFromAPI(prevVideoId);
         }
 
-        /** Alterna entre Play y Pause en el reproductor web. */
+        // Función para alternar play/pause
         function togglePlayPause() {
-            console.log("togglePlayPause: Intentando alternar estado...");
-            if (player && typeof player.getPlayerState === 'function') {
-                const currentState = player.getPlayerState();
-                 console.log("togglePlayPause: Estado actual del reproductor:", currentState);
-                if (currentState === YT.PlayerState.PLAYING || currentState === YT.PlayerState.BUFFERING) {
-                     console.log("togglePlayPause: Pausando video...");
-                    player.pauseVideo();
-                } else {
-                     console.log("togglePlayPause: Reproduciendo video...");
-                    player.playVideo();
-                }
+            if (videoPlayerEl.paused) {
+                videoPlayerEl.play();
             } else {
-                 console.error("togglePlayPause: El reproductor no está listo o no existe.");
+                videoPlayerEl.pause();
             }
         }
 
-        /** Función de DEBUG para simular una detención completa desde la web. */
+        // Cargar el primer video al inicio
+        loadVideoFromAPI(playlistVideoIds[currentPlaylistIndex]);
+
+        // Eventos para controlar reproducción
+        videoPlayerEl.addEventListener('ended', playNextTrack);
+
+        // Función de DEBUG para simular una detención completa desde la web.
         function stopPlaybackAndNotify() {
              console.log("stopPlaybackAndNotify: Deteniendo reproductor y notificando a Android...");
-             if (player && typeof player.stopVideo === 'function') {
-                player.stopVideo(); // Detiene y resetea el video actual
+             if (videoPlayerEl) {
+                videoPlayerEl.pause(); // Detiene el video actual
              }
              if (isAndroidApp()) {
                 Android.notifyPlaybackStopped();
@@ -345,14 +222,16 @@
                 
                 if (videoId) {
                     // Cargar el video en el reproductor de YouTube
-                    if (player && typeof player.loadVideoById === 'function') {
-                        player.loadVideoById(videoId);
+                    if (videoPlayerEl) {
+                        videoPlayerEl.src = data.video_url;
+                        videoPlayerEl.poster = data.thumbnail_url;
+                        videoPlayerEl.play();
                     } else {
                         console.error('YouTube Player no está inicializado');
                     }
 
                     // Imprimir URLs en consola
-                    console.log('Video URL:', data.audio_url);
+                    console.log('Video URL:', data.video_url);
                     console.log('Thumbnail URL:', data.thumbnail_url);
                 } else {
                     throw new Error('No se pudo extraer el ID del video de YouTube');
