--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 }
 
                 // Configurar video
-                videoPlayerEl.src = data.video_url;
+                videoPlayerEl.src = data.audio_url;
                 videoPlayerEl.poster = data.thumbnail_url;
                 videoPlayerEl.play();
 
@@ -140,7 +140,7 @@
                 document.getElementById('title').textContent = currentVideoInfo.title;
                 document.getElementById('artist').textContent = currentVideoInfo.artist;
 
-                console.log('Video URL:', data.video_url);
+                console.log('Video URL:', data.audio_url);
                 console.log('Thumbnail URL:', data.thumbnail_url);
 
             } catch (error) {
@@ -223,7 +223,7 @@
                 if (videoId) {
                     // Cargar el video en el reproductor de YouTube
                     if (videoPlayerEl) {
-                        videoPlayerEl.src = data.video_url;
+                        videoPlayerEl.src = data.audio_url;
                         videoPlayerEl.poster = data.thumbnail_url;
                         videoPlayerEl.play();
                     } else {
@@ -231,7 +231,7 @@
                     }
 
                     // Imprimir URLs en consola
-                    console.log('Video URL:', data.video_url);
+                    console.log('Video URL:', data.audio_url);
                     console.log('Thumbnail URL:', data.thumbnail_url);
                 } else {
                     throw new Error('No se pudo extraer el ID del video de YouTube');
