--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>VibeTurn - Reproductor Web</h1>
 
     <div id="player-container">
-        <iframe id="youtube-player" frameborder="0" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ?playsinline=1&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fderick061020.alwaysdata.net&amp;widgetid=1&amp;forigin=https%3A%2F%2Fderick061020.alwaysdata.net%2F&amp;aoriginsup=0&amp;vf=6"></iframe>
+        <lite-youtube videoid="guJLfqTFfIw" params="controls=0&enablejsapi=1"></lite-youtube>
     </div>
 
     <div id="controls">
