--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html><head>
     <title>VibeTurn Web Player (Ejemplo)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1/lite-youtube.min.js"></script>
     <style>
         /* Estilos básicos para demostración */
         body { font-family: sans-serif; padding: 10px; }
