--- a/index.html
+++ b/index.html
@@ -2,76 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>YouTube Video Player</title>
+    <title>Video Playback</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body { 
-            font-family: sans-serif; 
-            max-width: 800px; 
-            margin: 0 auto; 
-            padding: 20px; 
-            text-align: center; 
-        }
-        #youtube-url {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-        #video-player {
-            max-width: 100%;
-            margin-top: 15px;
-        }
+        body { margin: 0; background-color: black; display: flex; justify-content: center; align-items: center; height: 100vh; }
+        video { max-width: 100%; max-height: 100%; }
     </style>
 </head>
 <body>
-    <h1>YouTube Video Player</h1>
-    <input type="text" id="youtube-url" placeholder="Pega aquí el enlace de YouTube">
-    <button onclick="loadYouTubeVideo()">Reproducir</button>
-
-    <div id="player-container">
-        <img id="thumbnail" src="" style="max-width: 100%; display: none;">
-        <video id="video-player" controls style="display: none;"></video>
-    </div>
-
-    <script>
-        async function loadYouTubeVideo() {
-            const youtubeUrlInput = document.getElementById('youtube-url');
-            const videoUrl = youtubeUrlInput.value.trim();
-            const thumbnailEl = document.getElementById('thumbnail');
-            const videoPlayerEl = document.getElementById('video-player');
-
-            if (!videoUrl) {
-                alert('Por favor, ingresa un enlace de YouTube');
-                return;
-            }
-
-            try {
-                const response = await fetch(`get_youtube_audio.php?url=${encodeURIComponent(videoUrl)}`);
-                const data = await response.json();
-                console.log(`get_youtube_audio.php?url=${encodeURIComponent(videoUrl)}`);
-
-                if (data.error) {
-                    throw new Error(data.error);
-                }
-
-                // Mostrar miniatura
-                thumbnailEl.src = data.thumbnail_url;
-                thumbnailEl.style.display = 'block';
-
-                // Configurar y mostrar video
-                videoPlayerEl.src = data.audio_url;
-                videoPlayerEl.style.display = 'block';
-                videoPlayerEl.play();
-
-                // Imprimir URLs en consola
-                console.log('Video URL:', data.audio_url);
-                console.log('Thumbnail URL:', data.thumbnail_url);
-
-            } catch (error) {
-                console.error('Error:', error);
-                alert('No se pudo cargar el video. Verifica el enlace.');
-            }
-        }
-    </script>
+    <video controls autoplay src="https://rr4---sn-nja7snle.googlevideo.com/videoplayback?expire=1746926924&ei=7KgfaMv2F7LkxN8PruXKsQg&ip=2a00%3Ab6e0%3A1%3A20%3A15%3A%3A1&id=o-ACAC5x_V0zZC4NSURwocrUVefQm6MAWsJKzE935G6jxL&itag=18&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&bui=AecWEAbdCJ9V7hV-3y3YgsQdZdKy1M2zDgHGuRNaGu6mzXlEf5sZLpQ7ctLewJoo3h5CZAx-OgsxNLQa&vprv=1&svpuc=1&mime=video%2Fmp4&ns=hnw5ugE2aUxVyRmKCrk5JlQQ&rqh=1&cnr=14&ratebypass=yes&dur=212.091&lmt=1717051812678016&lmw=1&c=TVHTML5&sefc=1&txp=4538434&n=JvO_OMe5Nw4G6Q&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Ccnr%2Cratebypass%2Cdur%2Clmt&sig=AJfQdSswRQIgfCbwRFwm0KSF50Q0cJG6T0qCiXIOf-u21zbEm4qK8bkCIQDTdiAm4SC9lW0V0zkmGHNhlh-t8-PVrEKEVbEZV14dYw%3D%3D&rm=sn-apaapm4g-apae7l,sn-25grk7e&rrc=79,104&fexp=24350590,24350737,24350827,24350961,24351173,24351177,24351207,24351495,24351528,24351594,24351638,24351658,24351661,24351662,24351673,24351757,24351828,24351864,24351876,24351905,24351906,24352018,24352019,24352021,24352023&req_id=18613e5436c7a3ee&cmsv=e&rms=rdu,au&redirect_counter=2&cms_redirect=yes&ipbypass=yes&met=1746915287,&mh=7c&mip=2800:200:e280:1e10:b5db:939e:1802:f790&mm=29&mn=sn-nja7snle&ms=rdu&mt=1746914932&mv=m&mvi=4&pl=48&lsparams=ipbypass,met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=ACuhMU0wRAIgASS_RFi7C2jh4ajxFxfIwg8tLGPmwYk1rmucLAFcaWcCIDKkkIdmwpsOM3wYRc443h8K68EleId0F6s35OpY6d5j">
+        Tu navegador no soporta el elemento de video.
+    </video>
 </body>
 </html>
