--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
     </div>
 
     <div id="info">
-        <h2>Información Actual:</h2>
+        <h2>Información Actualon:</h2>
         <p>Estado: <span id="status">Esperando...</span></p>
         <p>Video ID: <span id="videoId">N/A</span></p>
         <p>Título: <span id="title">N/A</span></p>
