--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
     <h1>VibeTurn - Reproductor Web</h1>
 
     <div id="player-container">
-        <video id="youtube-player"></video>
+        <div id="youtube-player"></div>
     </div>
 
     <div id="controls">
