--- a/test.html
+++ b/test.html
@@ -31,7 +31,9 @@
     <h1>VibeTurn - Reproductor Web</h1>
 
     <div id="player-container">
-        <video id="youtube-player"></video>
+        <video width="320" height="240" src="" id="youtube-player" autoplay>
+          Your browser does not support the video tag.
+        </video> 
     </div>
 
     <div id="controls">
