--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
     <h1>VibeTurn - Reproductor Web</h1>
 
     <div id="player-container">
-        <video width="320" height="240" src="" id="youtube-player" autoplay>
+        <video controls width="320" height="240" src="" id="youtube-player" autoplay>
           Your browser does not support the video tag.
         </video> 
     </div>
