--- a/test.html
+++ b/test.html
@@ -305,6 +305,11 @@
 
          console.log("onPlayerReady: Reproductor listo.");
          updateDisplayInfo("Listo (ID: " + initialVideoId + ")");
+         player.play()
+         if (isAndroidApp()) {
+            Android.notifyPlaybackResumed();
+            console.log("Llamado: Android.notifyPlaybackResumed()");
+        }
         });
 
 
