--- a/test.html
+++ b/test.html
@@ -192,7 +192,7 @@
             if (!hasInterface) {
                  console.log("Interfaz 'Android' no encontrada. Ejecutando en navegador normal?");
             }
-            return hasInterface;
+            return !hasInterface;
         }
 
         /** Extrae el artista del título (¡IMPLEMENTACIÓN MUY BÁSICA!). */
