--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <p>Si no eres redirigido automáticamente, sigue este <a href="test.html">enlace a test.html</a>.</p>
+    <p>test1.html<a href="test1.html">enlace a test1.html</a>.</p>
 </body>
 </html>
